Create a reusable Research Article Hero pattern and apply it to all 4 research articles (image, citation row, actions, map/location block, related reading).

--- a/research/e-m183-recent-origin-2018.html
+++ b/research/e-m183-recent-origin-2018.html
@@ -17,13 +17,13 @@
     <meta property="og:title" content="E-M183 Recent Origin — Solé-Morata et al. 2017">
     <meta property="og:description" content="Whole Y-chromosome sequencing reveals E-M81 expanded only ~2,000-3,000 years ago.">
     <meta property="og:url" content="https://aitmhend-dna.github.io/research/e-m183-recent-origin-2018.html">
-    <meta property="og:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
+    <meta property="og:image" content="https://aitmhend-dna.github.io/img/E-PF2546-distribution.png">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="E-M183 Recent Origin — Solé-Morata et al. 2017">
     <meta name="twitter:description" content="Whole Y-chromosome sequencing reveals E-M81 expanded only ~2,000-3,000 years ago.">
-    <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
+    <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/E-PF2546-distribution.png">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://aitmhend-dna.github.io/research/e-m183-recent-origin-2018.html">
@@ -114,6 +114,17 @@
             <span class="meta-pill">Primary source: Scientific Reports (2017)</span>
         </div>
 
+        <figure class="card article-hero-media">
+            <img
+                src="../img/E-PF2546-distribution.png"
+                alt="Distribution chart of E-PF2546 in North Africa"
+                class="article-hero-image"
+                loading="eager"
+                decoding="async"
+            >
+            <figcaption class="article-hero-caption">E-PF2546 geographic distribution context for interpreting E-M183 expansion dynamics.</figcaption>
+        </figure>
+
         <!-- Paper Info Card -->
         <section class="card article-section paper-card-sienna">
             <div class="paper-meta-row">
@@ -123,7 +134,10 @@
             </div>
             <h2 class="paper-title">Whole Y-Chromosome Sequences Reveal an Extremely Recent Origin of E-M183</h2>
             <p class="paper-citation">Solé-Morata, N. et al. (2017). <em>Scientific Reports</em>, 7, 15941.</p>
-            <a href="https://doi.org/10.1038/s41598-017-16271-y" target="_blank" rel="noopener noreferrer" class="paper-doi-link paper-doi-sienna">View Full Paper (DOI) &rarr;</a>
+            <div class="paper-actions">
+                <a href="https://doi.org/10.1038/s41598-017-16271-y" target="_blank" rel="noopener noreferrer" class="paper-doi-link paper-doi-sienna">View Full Paper (DOI) &rarr;</a>
+                <a href="https://www.google.com/maps?q=30.5,-6.5&ll=30.5,-6.5&z=4&t=k" target="_blank" rel="noopener noreferrer" class="paper-doi-link paper-doi-sienna">View Maghreb Core (Satellite) &rarr;</a>
+            </div>
         </section>
 
         <!-- Summary -->
@@ -132,6 +146,19 @@
             <p>This study used whole Y-chromosome sequencing to reconstruct the phylogeny and dating of haplogroup E-M81 (also known as E-M183), the most common Y-DNA lineage among Amazigh (Berber) populations. Previous estimates based on microsatellite data had placed the origin of E-M81 much earlier, but this high-resolution approach dramatically revised the timeline.</p>
             <p>The researchers sequenced complete Y-chromosomes from men carrying E-M81 across North Africa and determined that the time to the most recent common ancestor (TMRCA) of this lineage is only approximately 2,000&ndash;3,000 years before present. This is far more recent than earlier estimates of 5,000&ndash;10,000 years.</p>
             <p>The phylogenetic tree revealed a striking star-like topology, indicating a rapid demographic expansion from a small founding population. This pattern is consistent with a population bottleneck followed by explosive growth, possibly linked to the adoption of camel pastoralism, trans-Saharan trade networks, or the consolidation of Amazigh confederations during the late first millennium BCE.</p>
+        </section>
+
+        <section class="card article-section">
+            <h3>Study Region</h3>
+            <div class="article-map-frame">
+                <iframe
+                    src="https://www.google.com/maps?q=30.5,-6.5&t=k&z=4&output=embed"
+                    title="Maghreb core study region (satellite map)"
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                    allowfullscreen
+                ></iframe>
+            </div>
         </section>
 
         <!-- Key Takeaways -->
