--- a/research/neolithic-iberia-morocco-2023.html
+++ b/research/neolithic-iberia-morocco-2023.html
@@ -17,13 +17,13 @@
     <meta property="og:title" content="Neolithic Iberia-Morocco Migration &mdash; Villalba-Mouco et al. 2023">
     <meta property="og:description" content="Ancient DNA from Neolithic Morocco confirms European ancestry and trans-Gibraltar migration.">
     <meta property="og:url" content="https://aitmhend-dna.github.io/research/neolithic-iberia-morocco-2023.html">
-    <meta property="og:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
+    <meta property="og:image" content="https://aitmhend-dna.github.io/img/map-maghreb.png">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Neolithic Iberia-Morocco Migration &mdash; Villalba-Mouco et al. 2023">
     <meta name="twitter:description" content="Ancient DNA from Neolithic Morocco confirms trans-Gibraltar migration routes.">
-    <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
+    <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/map-maghreb.png">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://aitmhend-dna.github.io/research/neolithic-iberia-morocco-2023.html">
@@ -114,6 +114,17 @@
             <span class="meta-pill">Primary source: Nature (2023)</span>
         </div>
 
+        <figure class="card article-hero-media">
+            <img
+                src="../img/map-maghreb.png"
+                alt="Maghreb map contextualizing Neolithic migration into Northwest Africa"
+                class="article-hero-image"
+                loading="eager"
+                decoding="async"
+            >
+            <figcaption class="article-hero-caption">Regional context map for Neolithic Iberia-to-Morocco and Levant-to-North Africa movements.</figcaption>
+        </figure>
+
         <section class="card article-section paper-card-clay">
             <div class="paper-meta-row">
                 <span class="paper-badge paper-badge-clay">Ancient DNA</span>
@@ -122,7 +133,10 @@
             </div>
             <h2 class="paper-title">Northwest African Neolithic Initiated by Migrants from Iberia and Levant</h2>
             <p class="paper-citation">Villalba-Mouco, V. et al. (2023). <em>Nature</em>, 618, 550&ndash;556.</p>
-            <a href="https://doi.org/10.1038/s41586-023-06166-6" target="_blank" rel="noopener noreferrer" class="paper-doi-link paper-doi-clay">View Full Paper (DOI) &rarr;</a>
+            <div class="paper-actions">
+                <a href="https://doi.org/10.1038/s41586-023-06166-6" target="_blank" rel="noopener noreferrer" class="paper-doi-link paper-doi-clay">View Full Paper (DOI) &rarr;</a>
+                <a href="https://www.google.com/maps?q=35.95,-5.53&ll=35.95,-5.53&z=7&t=k" target="_blank" rel="noopener noreferrer" class="paper-doi-link paper-doi-clay">View Strait Corridor (Satellite) &rarr;</a>
+            </div>
         </section>
 
         <section class="card article-section">
@@ -130,6 +144,19 @@
             <p>This groundbreaking study sequenced ancient DNA from Neolithic-era human remains found at multiple sites in Morocco, providing the first direct genetic evidence for how farming and pastoralism arrived in Northwest Africa. The transition from hunter-gatherer to agricultural societies in this region had long been debated.</p>
             <p>The ancient Moroccan genomes revealed a mixture of two ancestral components: one related to Neolithic European (specifically Iberian) farmers, and another related to Levantine Neolithic populations. This dual ancestry indicates that the Neolithic revolution in Northwest Africa was driven by actual migration of people, not just the diffusion of ideas and technologies.</p>
             <p>The European Neolithic component confirms trans-Gibraltar contact during the Neolithic period (~7,500&ndash;5,000 years ago), with genetic evidence of migration across the Strait of Gibraltar. The Levantine component suggests a parallel eastern route of migration, possibly through Egypt or along the Mediterranean coast.</p>
+        </section>
+
+        <section class="card article-section">
+            <h3>Study Region</h3>
+            <div class="article-map-frame">
+                <iframe
+                    src="https://www.google.com/maps?q=35.95,-5.53&t=k&z=7&output=embed"
+                    title="Strait of Gibraltar migration corridor (satellite map)"
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                    allowfullscreen
+                ></iframe>
+            </div>
         </section>
 
         <section class="card article-section takeaways-clay">
