--- a/research/north-african-mitogenomes-2025.html
+++ b/research/north-african-mitogenomes-2025.html
@@ -17,13 +17,13 @@
     <meta property="og:title" content="North African Mitogenomes &mdash; Colombo et al. 2025">
     <meta property="og:description" content="Massive mitogenome survey confirms H1 subclade distributions and female-mediated dispersals across North Africa.">
     <meta property="og:url" content="https://aitmhend-dna.github.io/research/north-african-mitogenomes-2025.html">
-    <meta property="og:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
+    <meta property="og:image" content="https://aitmhend-dna.github.io/img/map-h-haplo.png">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="North African Mitogenomes &mdash; Colombo et al. 2025">
     <meta name="twitter:description" content="Massive mitogenome survey confirms H1 subclade distributions across North Africa.">
-    <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
+    <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/map-h-haplo.png">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://aitmhend-dna.github.io/research/north-african-mitogenomes-2025.html">
@@ -114,6 +114,17 @@
             <span class="meta-pill">Primary source: Scientific Reports (2025)</span>
         </div>
 
+        <figure class="card article-hero-media">
+            <img
+                src="../img/map-h-haplo.png"
+                alt="H haplogroup distribution map relevant to North African mitogenome analyses"
+                class="article-hero-image"
+                loading="eager"
+                decoding="async"
+            >
+            <figcaption class="article-hero-caption">North African maternal lineage context map used for the mitogenome synthesis.</figcaption>
+        </figure>
+
         <section class="card article-section paper-card-ochre">
             <div class="paper-meta-row">
                 <span class="paper-badge paper-badge-ochre">Mitochondrial DNA</span>
@@ -122,7 +133,10 @@
             </div>
             <h2 class="paper-title">The Origin of Modern North Africans as Depicted by a Massive Survey of Mitogenomes</h2>
             <p class="paper-citation">Colombo, G. et al. (2025). <em>Scientific Reports</em>.</p>
-            <a href="https://doi.org/10.1038/s41598-025-12209-x" target="_blank" rel="noopener noreferrer" class="paper-doi-link paper-doi-ochre">View Full Paper (DOI) &rarr;</a>
+            <div class="paper-actions">
+                <a href="https://doi.org/10.1038/s41598-025-12209-x" target="_blank" rel="noopener noreferrer" class="paper-doi-link paper-doi-ochre">View Full Paper (DOI) &rarr;</a>
+                <a href="https://www.google.com/maps?q=28.5,10.0&ll=28.5,10.0&z=4&t=k" target="_blank" rel="noopener noreferrer" class="paper-doi-link paper-doi-ochre">View Study Region (Satellite) &rarr;</a>
+            </div>
         </section>
 
         <section class="card article-section">
@@ -130,6 +144,19 @@
             <p>This study represents the largest mitogenome survey of North African populations to date, analyzing 733 modern complete mitochondrial genomes alongside 43 ancient mitogenomes from across the region. The researchers reconstructed detailed phylogenetic trees for the major haplogroups found in North Africa.</p>
             <p>The study confirmed and refined the distribution of haplogroup H1 subclades (H1v, H1w, H1x) across North Africa, showing distinct frequency patterns between western and eastern populations. These H1 subclades are considered markers of prehistoric European-to-North African migration, most likely arriving during the late Pleistocene or early Holocene.</p>
             <p>Critically, the analysis demonstrated that female-mediated dispersals played a significant role in shaping North African genetic diversity, with multiple waves of maternal lineage movement detectable in the mitogenome data. The study also identified several previously uncharacterized sub-branches within established North African haplogroups.</p>
+        </section>
+
+        <section class="card article-section">
+            <h3>Study Region</h3>
+            <div class="article-map-frame">
+                <iframe
+                    src="https://www.google.com/maps?q=28.5,10.0&t=k&z=4&output=embed"
+                    title="North Africa study region (satellite map)"
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                    allowfullscreen
+                ></iframe>
+            </div>
         </section>
 
         <section class="card article-section takeaways-ochre">
