Add a “Start Here” page for first-time visitors: 3 paths (Genealogy beginner, Research reader, Chtouka/Souss-Massa history).

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
                     <h2 itemprop="headline" class="home-hero-title">Tracing an Ancient Amazigh Lineage through <span class="home-hero-accent">Genetic Analysis</span></h2>
                     <p class="text-large home-hero-copy">A comprehensive multi-disciplinary study examining the convergence of indigenous North African (E-PF2546) and European (H1-T16189C!) lineages within the Chtouka confederation of the Souss-Massa region.</p>
                     <div class="home-hero-actions">
+                        <a href="start-here.html" class="btn btn-outline btn-outline-copper">Start Here (New Visitors)</a>
                         <a href="lineage.html" class="btn btn-copper">📊 View Complete Analysis</a>
                         <a href="#souss-massa" class="btn btn-outline btn-outline-copper">🗺️ Explore Region</a>
                     </div>
