Add a Glossary page (haplogroup, TMRCA, aDNA, mtDNA, Y-DNA) linked from all long pages.

--- a/genetics.html
+++ b/genetics.html
@@ -101,6 +101,7 @@
             <a href="genetics.html" class="active">Genetics</a>
             <a href="culture.html">Culture</a>
             <a href="research.html">Research</a>
+            <a href="glossary.html">Glossary</a>
             <a href="contact.html">Contact</a>
         </div>
     </nav>
