--- a/research/neolithic-iberia-morocco-2023.html
+++ b/research/neolithic-iberia-morocco-2023.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
@@ -85,6 +85,7 @@
             <a href="../genetics.html">Genetics</a>
             <a href="../culture.html">Culture</a>
             <a href="../research.html" class="active">Research</a>
+            <a href="../glossary.html">Glossary</a>
             <a href="../contact.html">Contact</a>
         </div>
     </nav>
@@ -206,3 +207,5 @@
 
 </body>
 </html>
+
+
