--- a/lineage.html
+++ b/lineage.html
@@ -149,6 +149,7 @@
             <a href="genetics.html">Genetics</a>
             <a href="culture.html">Culture</a>
             <a href="research.html">Research</a>
+            <a href="glossary.html">Glossary</a>
             <a href="contact.html">Contact</a>
         </div>
     </nav>
