--- a/research/e-m183-recent-origin-2018.html
+++ b/research/e-m183-recent-origin-2018.html
@@ -85,6 +85,7 @@
             <a href="../genetics.html">Genetics</a>
             <a href="../culture.html">Culture</a>
             <a href="../research.html" class="active">Research</a>
+            <a href="../glossary.html">Glossary</a>
             <a href="../contact.html">Contact</a>
         </div>
     </nav>
@@ -218,6 +219,8 @@
 
 </body>
 </html>
+
+
 
 
 
