--- a/culture.html
+++ b/culture.html
@@ -40,6 +40,7 @@
     <!-- CSS and Scripts -->
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
+    <script src="js/reading-aids.js" defer></script>
     
     <!-- Structured Data - JSON-LD -->
     <script type="application/ld+json">
