--- a/lineage.html
+++ b/lineage.html
@@ -57,6 +57,7 @@
     <!-- CSS and Scripts -->
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
+    <script src="js/reading-aids.js" defer></script>
     <script type="module">
         import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
         mermaid.initialize({ 
