--- a/research/e-m183-recent-origin-2018.html
+++ b/research/e-m183-recent-origin-2018.html
@@ -38,6 +38,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="../css/styles.css">
+    <script src="../js/reading-aids.js" defer></script>
 
     <!-- Structured Data - JSON-LD -->
     <script type="application/ld+json">
