--- a/glossary.html
+++ b/glossary.html
@@ -71,6 +71,7 @@
             <a href="genetics.html">Genetics</a>
             <a href="culture.html">Culture</a>
             <a href="research.html">Research</a>
+            <a href="maps-sites.html">Maps &amp; Sites</a>
             <a href="start-here.html">Start Here</a>
             <a href="glossary.html" class="active">Glossary</a>
             <a href="contact.html">Contact</a>
