--- a/research.html
+++ b/research.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
@@ -75,6 +75,7 @@
             <a href="genetics.html">Genetics</a>
             <a href="culture.html">Culture</a>
             <a href="research.html" class="active">Research</a>
+            <a href="maps-sites.html">Maps &amp; Sites</a>
             <a href="contact.html">Contact</a>
         </div>
     </nav>
@@ -277,10 +278,3 @@
     </script>
 </body>
 </html>
-
-
-
-
-
-
-
