--- a/start-here.html
+++ b/start-here.html
@@ -76,6 +76,7 @@
             <a href="genetics.html">Genetics</a>
             <a href="culture.html">Culture</a>
             <a href="research.html">Research</a>
+            <a href="maps-sites.html">Maps &amp; Sites</a>
             <a href="start-here.html" class="active">Start Here</a>
             <a href="contact.html">Contact</a>
         </div>
@@ -169,4 +170,3 @@
     </footer>
 </body>
 </html>
-
