--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
@@ -84,6 +84,7 @@
             <a href="genetics.html">Genetics</a>
             <a href="culture.html">Culture</a>
             <a href="research.html">Research</a>
+            <a href="maps-sites.html">Maps &amp; Sites</a>
             <a href="contact.html" class="active">Contact</a>
         </div>
     </nav>
@@ -513,6 +514,3 @@
     </script>
 </body>
 </html>
-
-
-
