--- a/genetics.html
+++ b/genetics.html
@@ -102,6 +102,7 @@
             <a href="genetics.html" class="active">Genetics</a>
             <a href="culture.html">Culture</a>
             <a href="research.html">Research</a>
+            <a href="maps-sites.html">Maps &amp; Sites</a>
             <a href="glossary.html">Glossary</a>
             <a href="contact.html">Contact</a>
         </div>
@@ -698,5 +699,3 @@
     </script>
 </body>
 </html>
-
-
