--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
@@ -176,6 +176,7 @@
             <a href="genetics.html">Genetics</a>
             <a href="culture.html">Culture</a>
             <a href="research.html">Research</a>
+            <a href="maps-sites.html">Maps &amp; Sites</a>
             <a href="glossary.html">Glossary</a>
             <a href="contact.html">Contact</a>
         </div>
@@ -480,8 +481,3 @@
 
 </body>
 </html>
-
-
-
-
-
