--- a/lineage.html
+++ b/lineage.html
@@ -150,6 +150,7 @@
             <a href="genetics.html">Genetics</a>
             <a href="culture.html">Culture</a>
             <a href="research.html">Research</a>
+            <a href="maps-sites.html">Maps &amp; Sites</a>
             <a href="glossary.html">Glossary</a>
             <a href="contact.html">Contact</a>
         </div>
@@ -687,4 +688,3 @@ flowchart LR
     </script>
 </body>
 </html>
-
