add visulas to articles

--- a/research.html
+++ b/research.html
@@ -156,6 +156,13 @@
 
             <!-- Card 2: Colombo et al. 2025 -->
             <a href="research/north-african-mitogenomes-2025.html" class="discovery-card discovery-card-plain discovery-card-ochre" data-category="mt-dna" data-date="2025-01" data-citations="22">
+                <img
+                    src="img/map-h-haplo.png"
+                    alt="H haplogroup distribution map relevant to North African mitogenome analyses"
+                    class="discovery-cover-image"
+                    loading="lazy"
+                    decoding="async"
+                >
                 <div class="discovery-card-head">
                     <span class="discovery-tag discovery-tag-ochre">Mitochondrial DNA</span>
                     <span class="discovery-date">Jan 2025</span>
@@ -170,6 +177,13 @@
 
             <!-- Card 3: Villalba-Mouco et al. 2023 -->
             <a href="research/neolithic-iberia-morocco-2023.html" class="discovery-card discovery-card-plain discovery-card-clay" data-category="ancient-dna" data-date="2023-06" data-citations="180">
+                <img
+                    src="img/map-maghreb.png"
+                    alt="Maghreb map contextualizing Neolithic migration into Northwest Africa"
+                    class="discovery-cover-image"
+                    loading="lazy"
+                    decoding="async"
+                >
                 <div class="discovery-card-head">
                     <span class="discovery-tag discovery-tag-clay">Ancient DNA</span>
                     <span class="discovery-date">Jun 2023</span>
@@ -184,12 +198,19 @@
 
             <!-- Card 4: D'Atanasio et al. 2018 -->
             <a href="research/e-m183-recent-origin-2018.html" class="discovery-card discovery-card-plain discovery-card-sienna" data-category="y-dna" data-date="2017-11" data-citations="240">
+                <img
+                    src="img/E-PF2546-distribution.png"
+                    alt="Distribution chart of E-PF2546 in North Africa"
+                    class="discovery-cover-image"
+                    loading="lazy"
+                    decoding="async"
+                >
                 <div class="discovery-card-head">
                     <span class="discovery-tag discovery-tag-sienna">Y-Chromosome</span>
                     <span class="discovery-date">Nov 2017</span>
                 </div>
                 <h3 class="discovery-title">Whole Y-Chromosome Sequences Reveal an Extremely Recent Origin of E-M183</h3>
-                <p class="discovery-summary">Solé-Morata et al. use whole Y-chromosome sequencing to date E-M81 TMRCA to ~2,000-3,000 years ago, revealing a star-like demographic expansion.</p>
+                <p class="discovery-summary">Sole-Morata et al. use whole Y-chromosome sequencing to date E-M81 TMRCA to ~2,000-3,000 years ago, revealing a star-like demographic expansion.</p>
                 <div class="discovery-cta">
                     <span class="discovery-cta-label text-sienna">Read Summary</span>
                     <span class="text-sienna">&rarr;</span>
@@ -278,3 +299,4 @@
     </script>
 </body>
 </html>
+
