--- a/research/north-african-mitogenomes-2025.html
+++ b/research/north-african-mitogenomes-2025.html
@@ -29,7 +29,11 @@
     <link rel="canonical" href="https://aitmhend-dna.github.io/research/north-african-mitogenomes-2025.html">
 
     <!-- Favicon and Performance -->
-    <link rel="icon" type="image/png" href="/img/E-PF2546-map.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <meta name="theme-color" content="#CD7F32">
 
     <!-- Preconnect for Performance -->
